# MSC-ProjectPrep

./: .gitignore
DistributingImage/1DBlock/: Makefile  block1d.cpp
DistributingImage/Cyclic/: Makefile  cyclic.cpp
DistributingImage/RectangularVoronoi/: Makefile  rectangularvoronoi.cpp
DistributingImage/SquareAboutPOI/: Makefile  squareaboutpoi.cpp
DistributingImage/Voronoi/: Makefile  voronoi.cpp
GanttChart/: Makefile  README  main.tex
ImageProcessing/C/IceWing/: icewing-0.11.tar.bz2
ImageProcessing/C/IceWing/icewing-0.11/: CMakeLists.txt  Doxyfile.in  HACKING  Makefile  NEWS  README  TODO  config.h  config.h.in  icewing  icewing-api-update  icewing-config.in  icewing.1  icewing.pc.in
ImageProcessing/C/IceWing/icewing-0.11/avvideo/: AVCapture.c  AVCapture.h  AVColor.c  AVColor.h  AVImg.c  AVImg.h  AVOptions.c  AVOptions.h  drv_aravis.c  drv_aravis.h  drv_firewire.c  drv_firewire.h  drv_icube.c  drv_icube.h  drv_mvimpact.c  drv_mvimpact.h  drv_ueye.c  drv_ueye.h  drv_unicap.c  drv_unicap.h  drv_v4l2.c  drv_v4l2.h  drv_v4l2_old.c  drv_v4l2_old.h  videodev2.h  videodev2_old.h
ImageProcessing/C/IceWing/icewing-0.11/cmake/: cmake.txt
ImageProcessing/C/IceWing/icewing-0.11/data/tmpl/: Makefile  TMPL.c  TMPL.cpp  TMPL.h
ImageProcessing/C/IceWing/icewing-0.11/docs/: CMakeLists.txt  Makefile  icewing.dox  icewing.tex  index.ist  literatur.bib  quicktour.avi  strukto.sty
ImageProcessing/C/IceWing/icewing-0.11/docs/images/: iw_render.fig  renderChain.fig
ImageProcessing/C/IceWing/icewing-0.11/docs/tex/: install.tex  prgguide.tex  prgguide_d.tex  userguide.tex
ImageProcessing/C/IceWing/icewing-0.11/gui/: Gcolor.c  Gcolor.h  Gdata.c  Gdata.h  Gdialog.c  Gdialog.h  Ggui.c  Ggui.h  Ggui_i.h  Gimage.c  Gimage.h  Gimage_i.h  Ginfo.c  Ginfo.h  Glist.c  Glist.h  Gmovie.c  Goptions.c  Goptions.h  Goptions_i.h  Gpolygon.c  Gpolygon.h  Gpreferences.c  Gpreferences.h  Gpreview.c  Gpreview.h  Gpreview_i.h  Grender.c  Grender.h  GrenderImg.c  GrenderImg.h  GrenderText.c  GrenderText.h  Gsession.c  Gsession.h  Gtools.c  Gtools.h  text.c
ImageProcessing/C/IceWing/icewing-0.11/gui/avi/: avilib.c  avilib.h  jpegutils.c  jpegutils.h  stdint.h
ImageProcessing/C/IceWing/icewing-0.11/gui/images/: colorPicker.xpm  key_enter.xpm  measure.xpm  prefs.xpm  radius.xpm
ImageProcessing/C/IceWing/icewing-0.11/icemm/: PluginData.hpp
ImageProcessing/C/IceWing/icewing-0.11/libs/: AVImg.c  AVImg.h
ImageProcessing/C/IceWing/icewing-0.11/libs/dacs/: dacs.c  dacs.h
ImageProcessing/C/IceWing/icewing-0.11/main/: about.xbm  about.xpm  grab.c  grab.h  grab_avgui.c  grab_avgui.h  grab_prop.h  icewing.c  image.c  image.h  mainloop.c  mainloop.h  output.c  output.h  output_i.h  output_sfb.c  plugin.c  plugin.h  plugin_comm.c  plugin_comm.h  plugin_cxx.cpp  plugin_cxx.h  plugin_gui.c  plugin_gui.h  plugin_gui_plug.c  plugin_gui_plug.h  plugin_i.h  regcalc.c  region.c  region.h  sfb_iw.h  wing.xpm
ImageProcessing/C/IceWing/icewing-0.11/plugins/: Makefile  README
ImageProcessing/C/IceWing/icewing-0.11/plugins/backpro/: backpro.c
ImageProcessing/C/IceWing/icewing-0.11/plugins/demo/: Makefile  demo.c
ImageProcessing/C/IceWing/icewing-0.11/plugins/gsimple/: gauss_simple.c  gsimple_image.c  gsimple_image.h  skin.c  skin.h
ImageProcessing/C/IceWing/icewing-0.11/plugins/imgclass/: imgclass.c
ImageProcessing/C/IceWing/icewing-0.11/plugins/min/: Makefile  min.c
ImageProcessing/C/IceWing/icewing-0.11/plugins/min_cxx/: Makefile  min_cxx.cpp  min_cxx.h
ImageProcessing/C/IceWing/icewing-0.11/plugins/polynom/: polynom.c
ImageProcessing/C/IceWing/icewing-0.11/plugins/record/: record.c
ImageProcessing/C/IceWing/icewing-0.11/plugins/remotectrl/: Makefile  remotectrl.cpp
ImageProcessing/C/IceWing/icewing-0.11/plugins/shmdata/: Makefile  shmdata.c
ImageProcessing/C/IceWing/icewing-0.11/plugins/skinclass/: sclas_image.c  sclas_image.h  skinclass.c  skinclass.h
ImageProcessing/C/IceWing/icewing-0.11/plugins/tracking/: handtrack.c  handtrack.h  kalman.c  kalman.h  matrix.c  matrix.h  track_kalman.c  track_kalman.h  track_simple.c  track_simple.h  track_tools.c  track_tools.h  trajectory.c  trajectory.h
ImageProcessing/C/IceWing/icewing-0.11/tools/: fileset.c  fileset.h  img_video.c  img_video.h  img_video_template.c  opencv.cpp  opencv.h  tools.c  tools.h
ImageProcessing/C/IceWing/icewing-0.11/utils/: CMakeLists.txt  Makefile  icewing-control.cpp  icewing-docgen.in  icewing-doxygen  icewing-plugingen.in
ImageProcessing/C/IceWing/icewing-0.11/utils/scripts/: change.sh  convert.sh  renumber.sh  stichprobe.sh  sum_column.awk  toyuv.sh  training.sh
ImageProcessing/C/VLFeat/test_code/: Makefile  test0.c
ImageProcessing/CPP/OpenCV/: .test0.cpp.swp  Makefile  SURF_Homography.cpp  test0  test0.cpp  test1  test1.cpp  test2  test2.cpp  test3
MachineLearning/CPP/OpenCV/: .test0.cpp.swp  Makefile  test0  test0.cpp
TestImages/generate_test/: Makefile  generate_test.cpp
WriteUp/: Makefile  assignmentCian.sty  introduction.tex  main.tex  previous_dissertations.tex  project.bib
WriteUp/tex/: .gantt.tex.swp  .introduction.tex.swp  .previous_dissertations.tex.swp  .risk_analysis.tex.swp  .work_plan.tex.swp  gantt.tex  introduction.tex  literature_review.tex  preliminary_findings.tex  previous_dissertations.tex  project_proposal.tex  risk_analysis.tex  work_plan.tex
