PROJECT(UTILS)
# All tools from the utils directory

SET(PROGNAME icewing-control)

# Build/Install icewing-docgen and icewing-plugingen

CONFIGURE_FILE(${UTILS_SOURCE_DIR}/icewing-docgen.in ${UTILS_SOURCE_DIR}/icewing-docgen @ONLY)
CONFIGURE_FILE(${UTILS_SOURCE_DIR}/icewing-plugingen.in ${UTILS_SOURCE_DIR}/icewing-plugingen @ONLY)

INSTALL(PROGRAMS icewing-docgen icewing-plugingen
    DESTINATION ${BINDIR})

# Build/Install icewing-control
IF(WITH_READLINE)
    ADD_EXECUTABLE(${PROGNAME} icewing-control.cpp)
    SET_TARGET_PROPERTIES(${PROGNAME} PROPERTIES
	SKIP_BUILD_RPATH TRUE
	BUILD_WITH_INSTALL_RPATH TRUE)

    ADD_DEFINITIONS(${XCF_CFLAGS})
    INCLUDE_DIRECTORIES(
	${RLINE_INCLUDE_DIR}
	${DACS_INCLUDE_DIR})
    TARGET_LINK_LIBRARIES(${PROGNAME}
	${RLINE_LIBRARIES}
	${XCF_LDLIBS}
	${DACS_LIBRARIES})

    IF(WITH_DACS)
	ADD_DEFINITIONS(-DWITH_DACS)
    ENDIF(WITH_DACS)

    IF(WITH_XCF)
	ADD_DEFINITIONS(-DWITH_XCF)
    ENDIF(WITH_XCF)

    INSTALL(TARGETS ${PROGNAME}
	DESTINATION ${BINDIR})
ENDIF(WITH_READLINE)
